# cloudflare-ddns

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  cloudflare.py  example-config.toml  example-config.yml
.github/: dependabot.yml
.github/workflows/: build-container-image.yml  ci.yml  docker.yml
src/: cloudflare.rs  ddns.rs  ip.rs  main.rs
