[package]
name = "cloudflare-ddns"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
error-chain = "0.12.4"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
